	gtk.gdk.Screen.get_system_colormap() method.

	* pygtk-gdkcursor.xml (get_display) Add description of this
	PyGTK 2.2 method.
	Add descriptions of 2 more constructor signatures for PyGTK 2.4.

	* pygtk-gdkdevice.xml Reorder attribute list.

	* pygtk-gdkatom.xml (atom_intern) Note that value of
	only_if_exists is ignored.

	* pygtk-gdkdisplay.xml Add.

	* pygtk-gdkdisplaymanager.xml Add.

2004-04-19  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktreeview.xml (expand_to_path) (map_expanded_rows)
	(set_cursor_on_cell)
	Add descriptions of these methods added in PyGTK 2.2
	("fixed-height-mode") ("even-row-color") ("odd-row-color")
	Add descriptions of these properties.
	Add signal return value descriptions as needed.

	* pygtk-gtktreeviewcolumn.xml (set_expand) (get_expand)
	(cell_get_position)
	Add description of these PyGTK 2.4 methods.
	(focus_cell) Add description of this PyGTK 2.2 method.
	("expand") Add description of this GTK+ 2.4 signal.

	* pygtk-gtkuimanager.xml Add.

	* pygtk-gtkvbuttonbox.xml Tweak description.

	* pygtk-gtkwidget.xml (set_no_show_all) (get_no_show_all)
	(queue_resize_no_redraw) (can_activate_accel)
	(get_clipboard) (get_screen) (has_screen) (get_display)
	(get_root_window)
	Add descriptions of these PyGTK 2.4 methods.
	(gtk.widget_list_style_properties)
	Add description of this PyGTK 2.4 function.
	(get_size_request) Add description.
	(get_accessible) Remove description.
	("can-activate-accel") ("screen-changed") ("key-release-event")
	Add descriptions for these signals.

	* pygtk-gtkwindow.xml (set_screen) (get_screen) (is_active)
	(has_toplevel_focus) (activate_key) (propagate_key_event)
	(fullscreen) (unfullscreen) (set-keep-above) (set-keep-below)
	Add description for these PyGTK 2.2 and 2.4 methods.
	("accept-focus") ("decorated") ("gravity") ("role")
	("has-toplevel-focus") ("is-active") ("screen") ("skip-pager-hint")
	(skip-taskbar-hint") ("type-hint")
	Add decriptions for these GTK+ 2.2 adn 2.4 properties.