@@ -25,6 +25,9 @@
 
 	* pygtk-gdkdisplaymanager.xml Add.
 
+	* pygtk-gdkdragcontext.xml (find_window_for_screen) Add description
+	for this PyGTK 2.2 method.
+
 2004-04-19  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtktreeview.xml (expand_to_path) (map_expanded_rows)
